# delta-double-bot

./: .gitignore  dashboard.py  deribit_options_collector.py  double_diagonal_ideal_settings.md  pyproject.toml
.copilot-tracking/research/2026-06-21/: Option-Strategies-Macroption-Study-Notes.md  binance_futures_downloader.py  crypto-options-futures-backtest-datasets-research.md  directional-defined-risk-income-strategies-research.md  macroption-option-strategies-research.md  market-direction-detection-research.md
.copilot-tracking/research/subagents/2026-06-21/: crypto-futures-data-sources-research.md  crypto-options-data-sources-research.md  deribit-collector-api-spec.md  directional-vertical-spreads-income-research.md  dual-timeframe-diagonal-direction-research.md  ema-crossover-direction-research.md  (+13 more)
.github/workflows/: double-bot.yml
backtest/: __init__.py  config.py  engine.py  engine_delta.py  engine_double.py  indicators.py  metrics.py  options_pricing.py  preprocess_delta.py  preprocess_futures.py  preprocess_options.py  strategy.py  strategy_delta.py
data/binance_futures/: BTCUSDT_1d.csv  ETHUSDT_1d.csv
data/deribit_options/2026-06-21/: BTC_options_20260621_132125.csv  ETH_options_20260621_132125.csv
live/: __init__.py  check_connection.py  config.py  delta_data.py  executor.py  keepalive.sh  preview.py  requirements-live.txt  run_bot.cmd  run_bot_double.cmd  run_double.sh  runner.py  runner_double.py  scheduler.py  scheduler_double.py  setup_vm.sh  state.py  state_double.py  strategy_double_live.py  strategy_live.py
live/state/: double_position.json
(+2 files in other folders)
