[project]
name = "pmcc-backtest"
version = "0.1.0"
description = "PMCC/PMCP diagonal backtest + dashboard on Delta Exchange BTC tick data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15",
    "polars>=1.0",
    "scipy>=1.11",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false
